downpatch to JDK 17 and Gradle 7.6.2